Fix to http://jira.diamond.ac.uk/browse/DAWNSCI-868